Updated REST API
